--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@
   --card-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
   --transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+
 /* refonte du 7/8 */
 * {
   margin: 0;
@@ -27,16 +28,18 @@
 
 body {
   padding-top: 80px;
-  background-color:#f1f1f1 ;
+  background-color: #f1f1f1;
   color: var(--text-color);
   font-family: 'Poppins', sans-serif;
   line-height: 1.6;
 }
+
 .comments {
   display: block;
   margin: 0 auto;
   max-width: 600px;
 }
+
 h1 {
   font-size: 0.3rem;
 }
@@ -168,9 +171,22 @@ h3 {
   color: var(--error-color);
   border-radius: 8px;
 }
+
 .logout i {
-  color: var(--error-color); /*fill marche po*/
+  color: var(--error-color);
+  /*fill marche po*/
 }
+
+.pwa-btn {
+  display: none;
+  border: 1px solid #ab9ff2;
+  color: #ab9ff2;
+  padding: 10px 20px;
+  border-radius: 12px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
 .dropdown-content i {
   margin-right: 12px;
   width: 20px;
@@ -482,14 +498,17 @@ h3 {
   height: auto;
   display: block;
   margin: 0 auto;
-  border-radius: 12px; /* revenue à comment img car conflit à trouver!!!*/
+  border-radius: 12px;
+  /* revenue à comment img car conflit à trouver!!!*/
 }
 
 /* Conteneur parent critique */
 .comment {
   position: relative;
-  overflow: hidden; /* Contient les floats NUL C EST FAUX */
+  overflow: hidden;
+  /* Contient les floats NUL C EST FAUX */
 }
+
 @media (max-width: 768px) {
   .comment {
     padding: 15px !important;
@@ -512,6 +531,7 @@ h3 {
   text-decoration: none;
   color: var(--primary-color);
 }
+
 .comment-actions {
   display: flex;
   justify-content: flex-end;
@@ -539,14 +559,23 @@ h3 {
   color: var(--error-color);
   animation: pop 0.3s ease;
 }
+
 .like-btn.liked i {
   color: var(--error-color);
 }
 
 @keyframes pop {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.3); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.3);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 
@@ -564,11 +593,13 @@ h3 {
     opacity: 1;
     transform: translateY(0) scale(1);
   }
+
   100% {
     opacity: 0;
     transform: translateY(-40px) scale(6);
   }
 }
+
 @media (max-width: 600px) {
   .floating-heart {
     font-size: 3rem;
@@ -637,17 +668,20 @@ h3 {
 .reply-form .btn-reply:hover {
   background-color: var(--accent-color);
 }
+
 @media (max-width: 768px) {
   body {
     padding: 0 20px;
   }
 }
+
 @media (max-width: 768px) {
   .header-content {
     padding: 0 15px;
   }
 }
-  /* fin de la refonte du 7/8 */
+
+/* fin de la refonte du 7/8 */
 
 
 
